--- a/ks_includes/locales/KlipperScreen.pot
+++ b/ks_includes/locales/KlipperScreen.pot
@@ -592,7 +592,7 @@ msgid "Saved"
 msgstr ""
 
 #, python-format
-msgid "Saved offset: %s"
+msgid "Saved offset: %.3f"
 msgstr ""
 
 msgid "Screen DPMS"
