--- a/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
+++ b/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
@@ -214,6 +214,15 @@ msgstr "Очистить сетку стола"
 msgid "Stop bed mesh"
 msgstr "Прервать калибровку стола"
 
+msgid "Wait preheat: %s"
+msgstr "Преднагрев: %s"
+
+msgid "Calibration %d of %d, waiting..."
+msgstr "Калибровка %d из %d, ожидайте..."
+
+msgid "Bed mesh calibrating\nit can take a few minutes"
+msgstr "Калибровка стола\nэто может занять несколько минут"
+
 msgid "Deactivate"
 msgstr "Деактивировать"
 
@@ -265,6 +274,7 @@ msgstr "Не удалось получить ответ от"
 
 msgid ".\nPlease, check camera connection and restart crowsnest"
 msgstr ".\nПожалуйста, проверьте соединение с камерой и перезапустите службу crowsnest"
+
 msgid "Disable Motors"
 msgstr "Откл. моторы"
 
@@ -703,7 +713,7 @@ msgid "Constant Rate Factor"
 msgstr "Константный фактор скорости"
 
 msgid "timelapse"
-msgstr "Интервальная сьемка"
+msgstr "Интервальная съемка"
 
 msgid "Network"
 msgstr "Сеть"
@@ -815,28 +825,28 @@ msgid "Reference"
 msgstr "Базовая точка"
 
 msgid "Front left screw"
-msgstr "Передний левый винт"
+msgstr "Передний\nлевый винт"
 
 msgid "Back left screw"
-msgstr "Задний левый винт"
+msgstr "Задний\nлевый винт"
 
 msgid "Back right screw"
-msgstr "Задний правый винт"
+msgstr "Задний\nправый винт"
 
 msgid "Front right screw"
-msgstr "Передний правый винт"
+msgstr "Передний\nправый винт"
 
 msgid "Front middle screw"
-msgstr "Передний центральный винт"
+msgstr "Передний\nцентральный винт"
 
 msgid "Back middle screw"
-msgstr "Задний центральный винт"
+msgstr "Задний\nцентральный винт"
 
 msgid "Left middle screw"
-msgstr "Левый центральный винт"
+msgstr "Левый\nцентральный винт"
 
 msgid "Right middle screw"
-msgstr "Правый центральный винт"
+msgstr "Правый\nцентральный винт"
 
 msgid "Last Print Time"
 msgstr "Последняя печать"
@@ -1690,6 +1700,653 @@ msgstr "Крышка"
 
 msgid "Pid settings"
 msgstr "Настройки PID"
+
+msgid "Europe"
+msgstr "Европа"
+msgid "Africa"
+msgstr "Африка"
+msgid "America"
+msgstr "Америка"
+msgid "Antarctica"
+msgstr "Антарктика"
+msgid "Asia"
+msgstr "Азия"
+msgid "Atlantic"
+msgstr "Атлантический океан"
+msgid "Australia"
+msgstr "Австралия"
+msgid "Indian"
+msgstr "Индия"
+msgid "Pacific"
+msgstr "Тихий океан"
+msgid "UTC"
+msgstr "UTC"
+
+msgid "Andorra"
+msgstr "Андорра"
+msgid "Astrakhan"
+msgstr "Астрахань"
+msgid "Athens"
+msgstr "Афины"
+msgid "Belgrade"
+msgstr "Белград"
+msgid "Berlin"
+msgstr "Берлин"
+msgid "Brussels"
+msgstr "Брюссель"
+msgid "Bucharest"
+msgstr "Бухарест"
+msgid "Budapest"
+msgstr "Будапешт"
+msgid "Chisinau"
+msgstr "Кишинев"
+msgid "Dublin"
+msgstr "Дублин"
+msgid "Gibraltar"
+msgstr "Гибралтар"
+msgid "Helsinki"
+msgstr "Хельсинки"
+msgid "Istanbul"
+msgstr "Стамбул"
+msgid "Kaliningrad"
+msgstr "Калининград"
+msgid "Kirov"
+msgstr "Киров"
+msgid "Kyiv"
+msgstr "Киев"
+msgid "Lisbon"
+msgstr "Лиссабон"
+msgid "London"
+msgstr "Лондон"
+msgid "Madrid"
+msgstr "Мадрид"
+msgid "Malta"
+msgstr "Мальта"
+msgid "Minsk"
+msgstr "Минск"
+msgid "Moscow"
+msgstr "Москва"
+msgid "Paris"
+msgstr "Париж"
+msgid "Prague"
+msgstr "Прага"
+msgid "Riga"
+msgstr "Рига"
+msgid "Rome"
+msgstr "Рим"
+msgid "Samara"
+msgstr "Самара"
+msgid "Saratov"
+msgstr "Саратов"
+msgid "Simferopol"
+msgstr "Симферополь"
+msgid "Sofia"
+msgstr "София"
+msgid "Tallinn"
+msgstr "Таллин"
+msgid "Tirane"
+msgstr "Тирана"
+msgid "Ulyanovsk"
+msgstr "Ульяновск"
+msgid "Vienna"
+msgstr "Вена"
+msgid "Vilnius"
+msgstr "Вильнюс"
+msgid "Volgograd"
+msgstr "Волгоград"
+msgid "Warsaw"
+msgstr "Варшава"
+msgid "Zurich"
+msgstr "Цюрих"
+msgid "Abidjan"
+msgstr "Абиджан"
+msgid "Algiers"
+msgstr "Алжир"
+msgid "Bissau"
+msgstr "Бисау"
+msgid "Cairo"
+msgstr "Каир"
+msgid "Casablanca"
+msgstr "Касабланка"
+msgid "Ceuta"
+msgstr "Сеута"
+msgid "El_Aaiun"
+msgstr "Эль-Аюн"
+msgid "Johannesburg"
+msgstr "Йоханнесбург"
+msgid "Juba"
+msgstr "Джуба"
+msgid "Khartoum"
+msgstr "Хартум"
+msgid "Lagos"
+msgstr "Лагос"
+msgid "Maputo"
+msgstr "Мапуту"
+msgid "Monrovia"
+msgstr "Монровия"
+msgid "Nairobi"
+msgstr "Найроби"
+msgid "Ndjamena"
+msgstr "Нджамена"
+msgid "Sao_Tome"
+msgstr "Сан-Томе"
+msgid "Tripoli"
+msgstr "Триполи"
+msgid "Tunis"
+msgstr "Тунис"
+msgid "Windhoek"
+msgstr "Виндхук"
+msgid "Adak"
+msgstr "Адак"
+msgid "Anchorage"
+msgstr "Анкоридж"
+msgid "Araguaina"
+msgstr "Арагуаина"
+msgid "Argentina/Buenos_Aires"
+msgstr "Аргентина/Буэнос-Айрес"
+msgid "Argentina/Catamarca"
+msgstr "Аргентина/Катамарка"
+msgid "Argentina/Cordoba"
+msgstr "Аргентина/Кордова"
+msgid "Argentina/Jujuy"
+msgstr "Аргентина/Жужуй"
+msgid "Argentina/La_Rioja"
+msgstr "Аргентина/Ла-Риоха"
+msgid "Argentina/Mendoza"
+msgstr "Аргентина/Мендоса"
+msgid "Argentina/Rio_Gallegos"
+msgstr "Аргентина/Рио-Гальегос"
+msgid "Argentina/Salta"
+msgstr "Аргентина/Сальта"
+msgid "Argentina/San_Juan"
+msgstr "Аргентина/Сан-Хуан"
+msgid "Argentina/San_Luis"
+msgstr "Аргентина/Сан-Луис"
+msgid "Argentina/Tucuman"
+msgstr "Аргентина/Тукуман"
+msgid "Argentina/Ushuaia"
+msgstr "Аргентина/Ушуайя"
+msgid "Asuncion"
+msgstr "Асунсьон"
+msgid "Bahia"
+msgstr "Баия"
+msgid "Bahia_Banderas"
+msgstr "Баия-де-Бандерас"
+msgid "Barbados"
+msgstr "Барбадос"
+msgid "Belem"
+msgstr "Белем"
+msgid "Belize"
+msgstr "Белиз"
+msgid "Boa_Vista"
+msgstr "Боа-Вишта"
+msgid "Bogota"
+msgstr "Богота"
+msgid "Boise"
+msgstr "Бойсе"
+msgid "Cambridge_Bay"
+msgstr "Кеймбридж-Бей"
+msgid "Campo_Grande"
+msgstr "Кампо-Гранде"
+msgid "Cancun"
+msgstr "Канкун"
+msgid "Caracas"
+msgstr "Каракас"
+msgid "Cayenne"
+msgstr "Кайенна"
+msgid "Chicago"
+msgstr "Чикаго"
+msgid "Chihuahua"
+msgstr "Чиуауа"
+msgid "Ciudad_Juarez"
+msgstr "Сьюдад-Хуарес"
+msgid "Costa_Rica"
+msgstr "Коста-Рика"
+msgid "Coyhaique"
+msgstr "Койайке"
+msgid "Cuiaba"
+msgstr "Куяба"
+msgid "Danmarkshavn"
+msgstr "Данияс-Харбор"
+msgid "Dawson"
+msgstr "Досон"
+msgid "Dawson_Creek"
+msgstr "Досон-Крик"
+msgid "Denver"
+msgstr "Денвер"
+msgid "Detroit"
+msgstr "Детройт"
+msgid "Edmonton"
+msgstr "Эдмонтон"
+msgid "Eirunepe"
+msgstr "Эйрунепе"
+msgid "El_Salvador"
+msgstr "Эль-Сальвадор"
+msgid "Fort_Nelson"
+msgstr "Форт-Нельсон"
+msgid "Fortaleza"
+msgstr "Форталеза"
+msgid "Glace_Bay"
+msgstr "Глейс-Бей"
+msgid "Goose_Bay"
+msgstr "Гус-Бей"
+msgid "Grand_Turk"
+msgstr "Гранд-Тер"
+msgid "Guatemala"
+msgstr "Гватемала"
+msgid "Guayaquil"
+msgstr "Гуаякиль"
+msgid "Guyana"
+msgstr "Гайана"
+msgid "Halifax"
+msgstr "Галифакс"
+msgid "Havana"
+msgstr "Гавана"
+msgid "Hermosillo"
+msgstr "Эрмосильо"
+msgid "Indiana/Indianapolis"
+msgstr "Индиана/Индианаполис"
+msgid "Indiana/Knox"
+msgstr "Индиана/Нокс"
+msgid "Indiana/Marengo"
+msgstr "Индиана/Маренго"
+msgid "Indiana/Petersburg"
+msgstr "Индиана/Петербург"
+msgid "Indiana/Tell_City"
+msgstr "Индиана/Телл-Сити"
+msgid "Indiana/Vevay"
+msgstr "Индиана/Веве"
+msgid "Indiana/Vincennes"
+msgstr "Индиана/Венсен"
+msgid "Indiana/Winamac"
+msgstr "Индиана/Уинамак"
+msgid "Inuvik"
+msgstr "Инувик"
+msgid "Iqaluit"
+msgstr "Икалуит"
+msgid "Jamaica"
+msgstr "Ямайка"
+msgid "Juneau"
+msgstr "Джуно"
+msgid "Kentucky/Louisville"
+msgstr "Кентукки/Луисвилл"
+msgid "Kentucky/Monticello"
+msgstr "Кентукки/Монтичелло"
+msgid "La_Paz"
+msgstr "Ла-Пас"
+msgid "Lima"
+msgstr "Лима"
+msgid "Los_Angeles"
+msgstr "Лос-Анджелес"
+msgid "Maceio"
+msgstr "Масейо"
+msgid "Managua"
+msgstr "Манагуа"
+msgid "Manaus"
+msgstr "Манаус"
+msgid "Martinique"
+msgstr "Мартиника"
+msgid "Matamoros"
+msgstr "Матаморос"
+msgid "Mazatlan"
+msgstr "Масатлан"
+msgid "Menominee"
+msgstr "Меномини"
+msgid "Merida"
+msgstr "Мерида"
+msgid "Metlakalta"
+msgstr "Метлакалта"
+msgid "Mexico_City"
+msgstr "Мехико-Сити"
+msgid "Miquelon"
+msgstr "Микелон"
+msgid "Moncton"
+msgstr "Монктон"
+msgid "Monterrey"
+msgstr "Монтеррей"
+msgid "Montevideo"
+msgstr "Монтевидео"
+msgid "New_York"
+msgstr "Нью-Йорк"
+msgid "Nome"
+msgstr "Ном"
+msgid "Noronha"
+msgstr "Норонья"
+msgid "North_Dakota/Beulah"
+msgstr "Северная Дакота/Бойла"
+msgid "North_Dakota/Center"
+msgstr "Северная Дакота/Центр"
+msgid "North_Dakota/New_Salem"
+msgstr "Северная Дакота/Нью-Сейлем"
+msgid "Nuuk"
+msgstr "Нуук"
+msgid "Ojinaga"
+msgstr "Охинага"
+msgid "Panama"
+msgstr "Панама"
+msgid "Paramaribo"
+msgstr "Парамарибо"
+msgid "Phoenix"
+msgstr "Финикс"
+msgid "Port-au-Prince"
+msgstr "Порт-о-Пренс"
+msgid "Porto_Velho"
+msgstr "Порту-Велью"
+msgid "Puerto_Rico"
+msgstr "Пуэрто-Рико"
+msgid "Punta_Arenas"
+msgstr "Пунта-Аренас"
+msgid "Rankin_Inlet"
+msgstr "Ранкин-Инлет"
+msgid "Recife"
+msgstr "Ресифи"
+msgid "Regina"
+msgstr "Реджайна"
+msgid "Resolute"
+msgstr "Резольют"
+msgid "Rio_Branco"
+msgstr "Риу-Бранку"
+msgid "Santarem"
+msgstr "Сантарен"
+msgid "Santiago"
+msgstr "Сантьяго"
+msgid "Santo_Domingo"
+msgstr "Санто-Доминго"
+msgid "Sao_Paulo"
+msgstr "Сан-Паулу"
+msgid "Scoresbysund"
+msgstr "Иллоккортоормиут"
+msgid "Sitka"
+msgstr "Ситка"
+msgid "St_Johns"
+msgstr "Сент-Джонс"
+msgid "Swift_Current"
+msgstr "Свифт-Керрент"
+msgid "Tegucigalpa"
+msgstr "Тегусигальпа"
+msgid "Thule"
+msgstr "Туле"
+msgid "Tijuana"
+msgstr "Тихуана"
+msgid "Toronto"
+msgstr "Торонто"
+msgid "Vancouver"
+msgstr "Ванкувер"
+msgid "Whitehorse"
+msgstr "Уайтхорс"
+msgid "Winnipeg"
+msgstr "Виннипег"
+msgid "Yakutat"
+msgstr "Якутат"
+msgid "Casey"
+msgstr "Кейси"
+msgid "Davis"
+msgstr "Девис"
+msgid "Macquarie"
+msgstr "Маккуори"
+msgid "Mawson"
+msgstr "Мосон"
+msgid "Palmer"
+msgstr "Палмер"
+msgid "Rothera"
+msgstr "Ротера"
+msgid "Troll"
+msgstr "Тролль"
+msgid "Vostok"
+msgstr "Восток"
+msgid "Almaty"
+msgstr "Алматы"
+msgid "Amman"
+msgstr "Амман"
+msgid "Anadyr"
+msgstr "Анадырь"
+msgid "Aqtau"
+msgstr "Актау"
+msgid "Aqtobe"
+msgstr "Актобе"
+msgid "Ashgabat"
+msgstr "Ашхабад"
+msgid "Atyrau"
+msgstr "Атырау"
+msgid "Baghdad"
+msgstr "Багдад"
+msgid "Baku"
+msgstr "Баку"
+msgid "Bangkok"
+msgstr "Бангкок"
+msgid "Barnaul"
+msgstr "Барнаул"
+msgid "Beirut"
+msgstr "Бейрут"
+msgid "Bishkek"
+msgstr "Бишкек"
+msgid "Chita"
+msgstr "Чита"
+msgid "Colombo"
+msgstr "Коломбо"
+msgid "Damascus"
+msgstr "Дамаск"
+msgid "Dhaka"
+msgstr "Дакка"
+msgid "Dili"
+msgstr "Дили"
+msgid "Dubai"
+msgstr "Дубай"
+msgid "Dushanbe"
+msgstr "Душанбе"
+msgid "Famagusta"
+msgstr "Фамагуста"
+msgid "Gaza"
+msgstr "Газа"
+msgid "Hebron"
+msgstr "Хеврон"
+msgid "Ho_Chi_Minh"
+msgstr "Хошимин"
+msgid "Hong_Kong"
+msgstr "Гонконг"
+msgid "Hovd"
+msgstr "Ховд"
+msgid "Irkutsk"
+msgstr "Иркутск"
+msgid "Jakarta"
+msgstr "Джакарта"
+msgid "Jayapura"
+msgstr "Джаяпура"
+msgid "Jerusalem"
+msgstr "Иерусалим"
+msgid "Kabul"
+msgstr "Кабул"
+msgid "Kamchatka"
+msgstr "Камчатка"
+msgid "Karachi"
+msgstr "Карачи"
+msgid "Kathmandu"
+msgstr "Катманду"
+msgid "Khandyga"
+msgstr "Хандыга"
+msgid "Kolkata"
+msgstr "Калькутта"
+msgid "Krasnoyarsk"
+msgstr "Красноярск"
+msgid "Kuching"
+msgstr "Кучинг"
+msgid "Macau"
+msgstr "Макао"
+msgid "Magadan"
+msgstr "Магадан"
+msgid "Makassar"
+msgstr "Макасар"
+msgid "Manila"
+msgstr "Манила"
+msgid "Nicosia"
+msgstr "Никосия"
+msgid "Novokuznetsk"
+msgstr "Новокузнецк"
+msgid "Novosibirsk"
+msgstr "Новосибирск"
+msgid "Omsk"
+msgstr "Омск"
+msgid "Oral"
+msgstr "Уральск"
+msgid "Pontianak"
+msgstr "Понтианак"
+msgid "Pyongyang"
+msgstr "Пхеньян"
+msgid "Qatar"
+msgstr "Катар"
+msgid "Qostanay"
+msgstr "Костанай"
+msgid "Qyzylorda"
+msgstr "Кызылорда"
+msgid "Riyadh"
+msgstr "Эр-Рияд"
+msgid "Sakhalin"
+msgstr "Сахалин"
+msgid "Samarkand"
+msgstr "Самарканд"
+msgid "Seoul"
+msgstr "Сеул"
+msgid "Shanghai"
+msgstr "Шанхай"
+msgid "Singapore"
+msgstr "Сингапур"
+msgid "Srednekolymsk"
+msgstr "Среднеколымск"
+msgid "Taipei"
+msgstr "Тайбэй"
+msgid "Tashkent"
+msgstr "Ташкент"
+msgid "Tbilisi"
+msgstr "Тбилиси"
+msgid "Tehran"
+msgstr "Тегеран"
+msgid "Thimphu"
+msgstr "Тхимпху"
+msgid "Tokyo"
+msgstr "Токио"
+msgid "Tomsk"
+msgstr "Томск"
+msgid "Ulaanbaatar"
+msgstr "Улан-Батор"
+msgid "Urumqi"
+msgstr "Урумчи"
+msgid "Ust-Nera"
+msgstr "Усть-Нера"
+msgid "Vladivostok"
+msgstr "Владивосток"
+msgid "Yakutsk"
+msgstr "Якутск"
+msgid "Yangon"
+msgstr "Янгон"
+msgid "Yekaterinburg"
+msgstr "Екатеринбург"
+msgid "Yerevan"
+msgstr "Ереван"
+msgid "Azores"
+msgstr "Азорские острова"
+msgid "Bermuda"
+msgstr "Бермудские острова"
+msgid "Canary"
+msgstr "Канарские острова"
+msgid "Cape_Verde"
+msgstr "Кабо-Верде"
+msgid "Faroe"
+msgstr "Фарерские острова"
+msgid "Madeira"
+msgstr "Мадейра"
+msgid "South_Georgia"
+msgstr "Южная Георгия"
+msgid "Stanley"
+msgstr "Станли"
+msgid "Adelaide"
+msgstr "Аделаида"
+msgid "Brisbane"
+msgstr "Брисбен"
+msgid "Broken_Hill"
+msgstr "Брокен-Хилл"
+msgid "Darwin"
+msgstr "Дарвин"
+msgid "Eucla"
+msgstr "Юкла"
+msgid "Hobart"
+msgstr "Хобарт"
+msgid "Lindeman"
+msgstr "Линдеманн"
+msgid "Lord_Howe"
+msgstr "Лорд-Хау"
+msgid "Melbourne"
+msgstr "Мельбурн"
+msgid "Perth"
+msgstr "Перт"
+msgid "Sydney"
+msgstr "Сидней"
+msgid "Chagos"
+msgstr "Чагос"
+msgid "Maldives"
+msgstr "Мальдивы"
+msgid "Mauritius"
+msgstr "Маврикий"
+msgid "Apia"
+msgstr "Апиа"
+msgid "Auckland"
+msgstr "Окленд"
+msgid "Bougainville"
+msgstr "Бугенвиль"
+msgid "Chatham"
+msgstr "Чатем"
+msgid "Easter"
+msgstr "Истер"
+msgid "Efate"
+msgstr "Эфате"
+msgid "Fakaofo"
+msgstr "Факаофо"
+msgid "Fiji"
+msgstr "Фиджи"
+msgid "Galapagos"
+msgstr "Галапагос"
+msgid "Gambier"
+msgstr "Острова Гамбье"
+msgid "Guadalcanal"
+msgstr "Гуадалканал"
+msgid "Guam"
+msgstr "Гуам"
+msgid "Honolulu"
+msgstr "Гонолулу"
+msgid "Kanton"
+msgstr "Гуанчжоу"
+msgid "Kiritimati"
+msgstr "Остров Рождества"
+msgid "Kosrae"
+msgstr "Косрае"
+msgid "Kwajalein"
+msgstr "остров Кваджалей"
+msgid "Marquesas"
+msgstr "Маркесас-Кис"
+msgid "Nauru"
+msgstr "Науру"
+msgid "Niue"
+msgstr "Ниуэ"
+msgid "Norfolk"
+msgstr "Норфолк"
+msgid "Noumea"
+msgstr "Нумеа"
+msgid "Pago_Pago"
+msgstr "Паго-Паго"
+msgid "Palau"
+msgstr "Палау"
+msgid "Pitcairn"
+msgstr "Питкерн"
+msgid "Port_Moresby"
+msgstr "Порт-Морсби"
+msgid "Rarotonga"
+msgstr "остров Раротонга"
+msgid "Tahiti"
+msgstr "Таити"
+msgid "Tarawa"
+msgstr "Тарава"
+msgid "Tongatapu"
+msgstr "Тонгатапу"
+
 # ###    END NEW    ####
 #~ msgid "Decrease"
 #~ msgstr "Уменьшить"
