Добавлена возможность настроить печать перед выбором файла для печати

--- a/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
+++ b/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
@@ -569,7 +569,7 @@ msgid "Max"
 msgstr "Максимум"
 
 msgid "Max Acceleration"
-msgstr "Максимальное ускорение"
+msgstr "Ускорение"
 
 msgid "Minimum Cruise Ratio"
 msgstr "Мин. коэф. крейсерской скорости"
@@ -1110,7 +1110,7 @@ msgid "Speed:"
 msgstr "Скорость:"
 
 msgid "Square Corner Velocity"
-msgstr "Квадратная угловая скорость"
+msgstr "Скорость прохождения угла"
 
 msgid "Start"
 msgstr "Hачать"
